feat(analytics): add SPA route tracking for Google Analytics
- Disable automatic page view on initial config to prevent duplicates
- Add router navigation guard to track all route changes
- Track page path and title for each navigation

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'G-JLES1V6N73');
+      gtag('config', 'G-JLES1V6N73', { send_page_view: false });
     </script>
   </body>
 </html>
